data/derived/sp14/progs/unify/prog4560.ml.out
Characters 102-112:
  else head::tail;;
       ^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
